--- a/src/components/Pagination.astro
+++ b/src/components/Pagination.astro
@@ -67,5 +67,6 @@ for (let i = startPage; i <= endPage; i += 1) {
   .pagination a.inactive {
     color: #999;
     text-decoration: none;
+    pointer-events: none;
   }
 </style>
