--- a/src/components/BlogSections/BlogSection.astro
+++ b/src/components/BlogSections/BlogSection.astro
@@ -3,8 +3,9 @@ import '../../styles/notion-color.css';
 import Date from './Date.astro';
 
 import { type Post } from '../../lib/interfaces';
-
 import { getPostLink } from '../../lib/blog-helpers';
+
+import NoImage from '../../images/no-image.png';
 
 export interface Props {
   post: Post;
@@ -19,7 +20,7 @@ const { post } = Astro.props;
   <div class="relative pt-[50%] sm:pt-[70%] rounded-xl overflow-hidden border-2">
     <img
       class="size-full absolute top-0 start-0 object-cover group-hover:scale-110 transition-transform duration-500 ease-in-out rounded-xl"
-      src={post.FeaturedImage ? post.FeaturedImage.Url : '/src/images/no-image.png'}
+      src={post.FeaturedImage ? post.FeaturedImage.Url : NoImage.src}
       alt="Image Description"
       >
     {
