enable my icon at about page

--- a/src/components/About/Profile.astro
+++ b/src/components/About/Profile.astro
@@ -1,3 +1,6 @@
+---
+import MyIcon from '../../images/my_icon.svg';
+---
 <div class="block w-full text-center">
   <h1 class="md:mx-auto text-2xl sm:text-4xl font-bold text-gray-800 dark:text-gray-200 block">
     PROFILE
@@ -10,7 +13,7 @@
     <div>
       <img
         class="max-w-lg"
-        src="/src/images/my_icon.svg"
+        src={MyIcon.src}
       />
     </div>
   </div>
