--- a/src/components/notion-blocks/BulletedListItems.astro
+++ b/src/components/notion-blocks/BulletedListItems.astro
@@ -7,24 +7,29 @@ import '../../styles/notion-color.css';
 
 export interface Props {
   block: Block
+  level: number
   headings: Block[]
 }
 
-const { block, headings } = Astro.props;
+const { block, level, headings } = Astro.props;
+
+const listTypes = ['square', 'disc', 'circle'];
 ---
 
-<ul>
+<ul class={listTypes[level % 3]}>
   {
-    block.ListItems.filter(
+    block.ListItems?.filter(
       (b: Block) => b.Type === 'bulleted_list_item',
     ).map((b: Block) => (
-      <li class={snakeToKebab(b.BulletedListItem.Color)}>
-        {b.BulletedListItem.RichTexts.map((richText: RichText) => (
+      <li class={snakeToKebab(b.BulletedListItem?.Color as string)}>
+        {b.BulletedListItem?.RichTexts.map((richText: RichText) => (
           <RichTextComponent richText={richText} />
         ))}
         {b.HasChildren && (
           <NotionBlocks
-            blocks={b.BulletedListItem.Children}
+            isRoot={false}
+            blocks={b.BulletedListItem?.Children as Block[]}
+            level={level + 1}
             headings={headings}
           />
         )}
@@ -36,6 +41,17 @@ const { block, headings } = Astro.props;
 <style>
   ul {
     font-size: 1rem;
+  }
+
+  .disc {
     list-style-type: disc;
+  }
+
+  .circle {
+    list-style-type: circle;
+  }
+
+  .square {
+    list-style-type: square;
   }
 </style>
