--- a/src/components/About/Profile.astro
+++ b/src/components/About/Profile.astro
@@ -81,7 +81,7 @@ import MyIcon from '../../images/my_icon.svg';
           class="hs-accordion-content hidden w-full overflow-hidden transition-[height] duration-300"
         >
           <p class="text-gray-600 dark:text-gray-400">
-            二歳に来日 → 開成中学 → 開成高校 → 駿台予備校（一年浪人）→ 東京大学理科I類 → 東京大学工学部システム創成学科C → 東大大学院情報理工学系研究科創造情報学専攻 → Amazon Japan, Software Development Engineer → 某外資IT企業
+            来日 → 開成中学 → 開成高校 → 駿台予備校（一年浪人）→ 東京大学理科I類 → 東京大学工学部 → 東大大学院情報理工学系研究科 → Amazon Japan, Software Development Engineer → 某外資IT企業
             <br>※現在の勤め先は伏せさせていただきます。
           </p>
         </div>
